# 00_CODE

./: README.md  package-lock.json  package.json
gpt4o_image_analysis/: 00_executive_summary.md  01_ghibli_style_analysis.md  02_transparent_image_guide.md  03_character_consistency.md  04_business_marketing_part1.md  04_business_marketing_part2.md  05_education_applications.md  06_game_animation.md  07_creative_content_part1.md  07_creative_content_part2.md  08_viral_trends.md  09_professional_fields.md  10_technical_features.md  11_innovative_ideas_part1.md  11_innovative_ideas_part2.md  12_prompt_engineering.md  13_limitations_ethics.md  14_future_outlook.md  project_plan.md
myFirstPJ/: index.html
point_to_mesh/: .gitignore  CHANGELOG.md  README.md  build_native.bat  build_native.ps1  project_plan.md
point_to_mesh/Docs/: 00_Research_Summary_Part1.md  00_Research_Summary_Part2.md  00_Research_Summary_Part3.md  00_Research_Summary_Part4.md  01_Conclusion_Architecture.md  02_Cpp_Plugin_Design_Part1.md  02_Cpp_Plugin_Design_Part2.md  03_Unity_CSharp_Wrapper_Part1.md  03_Unity_CSharp_Wrapper_Part2.md  03_Unity_CSharp_Wrapper_Part3.md  04_Unity_Sample_Scene.md  05_Performance_Tuning.md  06_Validation_Testing.md  07_Next_Steps.md  08_Build_Environment_Setup.md
point_to_mesh/Native/: CMakeLists.txt
point_to_mesh/Native/include/: smr_welding_api.h
point_to_mesh/Native/src/: mesh_generator.cpp  path_planner.cpp  point_cloud.cpp  robot_kinematics.cpp
point_to_mesh/Unity/SMRWelding/Assets/Materials/: PointCloud.mat  README.md  WeldPath.mat
point_to_mesh/Unity/SMRWelding/Assets/Plugins/x86_64/: README.md
point_to_mesh/Unity/SMRWelding/Assets/Prefabs/: README.md
point_to_mesh/Unity/SMRWelding/Assets/Scenes/: README.md  WeldingDemo.unity
point_to_mesh/Unity/SMRWelding/Assets/Scripts/: QuickStartDemo.cs  SMRWelding.asmdef  SMRWeldingController.cs  SMRWeldingControllerPart2.cs
point_to_mesh/Unity/SMRWelding/Assets/Scripts/Components/: PathVisualizer.cs  PointCloudVisualizer.cs  RobotVisualizer.cs  WeldingPipelineController.cs
point_to_mesh/Unity/SMRWelding/Assets/Scripts/Core/: SimulationMode.cs  WeldingPipeline.cs
point_to_mesh/Unity/SMRWelding/Assets/Scripts/Editor/: ConfigEditorWindow.cs  DemoSceneSetup.cs  SMRWelding.Editor.asmdef  SampleDataWindow.cs  WeldingSceneSetup.cs
point_to_mesh/Unity/SMRWelding/Assets/Scripts/Mesh/: MeshData.cs
point_to_mesh/Unity/SMRWelding/Assets/Scripts/Native/: MeshWrapper.cs  NativeBindings.cs  NativeTypes.cs  PathWrapper.cs  PointCloudWrapper.cs  RobotWrapper.cs
point_to_mesh/Unity/SMRWelding/Assets/Scripts/Path/: WeldPath.cs
point_to_mesh/Unity/SMRWelding/Assets/Scripts/PointCloud/: PointCloudData.cs
point_to_mesh/Unity/SMRWelding/Assets/Scripts/Robot/: RobotModel.cs
point_to_mesh/Unity/SMRWelding/Assets/Scripts/Tests/: PipelineTests.cs
point_to_mesh/Unity/SMRWelding/Assets/Scripts/UI/: WeldingUI.cs
point_to_mesh/Unity/SMRWelding/Assets/Scripts/Utilities/: ConfigManager.cs  FileUtilities.cs  MathUtilities.cs  ResultExporter.cs  SampleDataGenerator.cs
point_to_mesh/Unity/SMRWelding/Assets/StreamingAssets/SampleData/: README.md
point_to_mesh/Unity/SMRWelding/ProjectSettings/: EditorBuildSettings.asset  EditorSettings.asset  InputManager.asset  ProjectSettings.asset  ProjectVersion.txt  QualitySettings.asset  TagManager.asset
